# manim_python_tutorial

./: .gitignore  dice.py  function_introduction.py  functions_tutorial.py  main.py  pyproject.toml
manim_ace/: code.py  conditionals.py  fonts.py  functions.py  lists.py  scene.py  variables.py
manim_ace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scenario/: function.md  roll_dice.md
